<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newEditLearningUnitConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewEditLearningUnit">

    <ImageButton
        android:id="@+id/newEditLearningUnitBackButton"
        style="@style/StandardButton"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarInclude"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <TextView
        android:id="@+id/learningEffortHoursTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/hours"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/learningEffortMinutesNumberPicker"
        app:layout_constraintTop_toBottomOf="@+id/learningEffortTextView" />

    <NumberPicker
        android:id="@+id/learningEffortMinutesNumberPicker"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="1dp"
        app:layout_constraintStart_toEndOf="@+id/colonTextView"
        app:layout_constraintTop_toBottomOf="@+id/learningEffortTextView" />

    <include
        android:id="@+id/toolbarInclude"
        layout="@layout/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/courseTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:ellipsize="end"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="30"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newEditLearningUnitBackButton" />

    <TextView
        android:id="@+id/learningEffortTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/learning_effort"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseTitleEditText" />

    <Button
        android:id="@+id/newEditLearningUnitButton"
        style="@style/StandardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/create_learning_unit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/learningEffortMinutesNumberPicker" />

    <NumberPicker
        android:id="@+id/learningEffortHoursNumberPicker"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/learningEffortTextView" />

    <TextView
        android:id="@+id/colonTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:text="@string/colon"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@+id/learningEffortHoursNumberPicker"
        app:layout_constraintTop_toBottomOf="@+id/learningEffortTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>